# indexia

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  RELEASES.rst  app.py  drone.py  graph.py  indexia.py  inquiry.py  onomata.db  pyproject.toml  queries.py  requirements.txt  schemata.py  setup.cfg  terminal.py
.github/workflows/: python-publish.yml
data/: indexia_lower.txt
data/queries/: card_dates.sql  cards.sql  libraries.sql  scribes.sql
data/queries/tests/: year.sql  year_month.sql  year_month_day.sql  year_month_day_hour.sql  year_month_day_hour_minute.sql
docs/source/: applications.rst  conf.py  glossary.rst  index.rst  indexia.rst  modules.rst  releases.rst  usage.rst
indexia/: __init__.py  eidola.py  indexia.py  inquiry.py  schemata.py
indexia/resources/queries/: corpus.sql
src/indexia/: drone.py  indexia.py  inquiry.py  pylai.py  schemata.py
src/indexia/resources/queries/: logonyms.sql
templates/: cards.html  libraries.html  logonyms.html  search.html  update.html
tests/: test_drone.py  test_eidola.py  test_graph.py  test_indexia.py  test_inquiry.py  test_queries.py  test_querystore.py  test_schemata.py
