[build-system]
requires = ["setuptools>=50.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indexia"
version = "0.0.1"
authors = [
  { name="Aphorikles", email="perceptua.blue@gmail.com" },
]
description = "Collections & connections. A virtual Zettelkasten."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Perceptua/indexia"
"Bug Tracker" = "https://github.com/Perceptua/indexia/issues"
